# MTRX3760MP

./: README.md
major_project/: CMakeLists.txt  README.md  package.xml
major_project/include/major_project/: FSM.h  cmdvel.h  emergency.h  fire.h  laser.h  main.h  maps.h  mb_interface.h  move_base_client.h  odom.h  ros_subscriber.h  states.h  test.h  unexplored_nav.h
major_project/src/: FSM.cpp  cmdvel.cpp  emergency.cpp  fire.cpp  main.cpp  maps.cpp  mb_interface.cpp  move_base_client.cpp  odom.cpp  test.cpp  unexplored_nav.cpp
tag_detector/: CMakeLists.txt  ReadMe.txt  package.xml
tag_detector/include/tag_detector/: cameraport.h  tag_detect.h
tag_detector/msg/: detect.msg
tag_detector/src/: cameraWindow.cpp  main.cpp
